Fix table hover jump and scrollbars

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,10 +29,6 @@ html {
     scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar {
-    display: none;
-}
-
 /* body */
 body {
     width: 100vw;
@@ -102,7 +98,7 @@ footer {
 .btn {
     background: rgba(var(--theme-one), 1);
     border: 3px solid black;
-    color: white;
+    color: black;
 }
 
 .btn:hover {
@@ -132,8 +128,8 @@ footer {
 
 #view-booking-table tr:hover {
     background-color: rgba(var(--theme-five), 1);
-    border-top: 3px solid rgba(var(--theme-two), 1);
-    border-bottom: 3px solid rgba(var(--theme-two), 1);
+    /* border-top: 1px solid rgba(var(--theme-two), 1);
+    border-bottom: 1px solid rgba(var(--theme-two), 1); */
     color: white;
 }
 
